# chalk

./: PLAN.md  TODO.md  pyproject.toml
src/sketchplot/: __init__.py  layout.py  rasterize.py  validate.py
src/sparkplot/: __init__.py  layout.py  rasterize.py
tests/: test_bar.py  test_line.py  test_validate.py
tests/fixtures/: bar_basic_ascii.txt  bar_basic_unicode.txt  bar_multi_ascii.txt  bar_multi_unicode.txt  bar_single_ascii.txt  bar_single_unicode.txt  line_basic_ascii.txt  line_basic_unicode.txt  line_small_ascii.txt  line_small_unicode.txt  line_title_ascii.txt  line_title_unicode.txt
