[project]
name = "sparkplot"
version = "0.1.0"
description = "A small Python library for rendering plots as plain text to stdout"
authors = [
    { name = "Niru Maheswaranathan", email = "niru@fastmail.com" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.11.0",
    "jetplot>=0.6.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
